--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#position opening">POSITION OPENING</a>
+                        <a class="nav-link me-lg-3" href="#positionopening">POSITION OPENING</a>
                     </li>
 
                 </ul>
@@ -147,17 +147,17 @@
     </section>
     <!-- Publications  -->
 
-    <!-- Awards -->
+    <!-- Positon Opening -->
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="position opening">
         <div class="container px-5">
             <header>
                 <h2 id="position opening-subtitle"><i class="bi bi-award-fill"></i>POSITION OPENING </h2>
             </header>
-            <div class="main-body" id="position opening-md"></div>
+            <div class="main-body" id="positionopening-md"></div>
 
         </div>
     </section>
-    <!-- Awards -->
+    <!-- Positon Opening -->
 
 
     <!-- Footer-->
