--- a/index.html
+++ b/index.html
@@ -147,17 +147,17 @@
     </section>
     <!-- Publications  -->
 
-    <!-- Positon Opening -->
+    <!-- Position Opening -->
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="position opening">
         <div class="container px-5">
             <header>
-                <h2 id="position opening-subtitle"><i class="bi bi-award-fill"></i>POSITION OPENING </h2>
+                <h2 id="position opening-subtitle"><i class="bi bi-file-text-fill"></i>POSITION OPENING</h2>
             </header>
             <div class="main-body" id="positionopening-md"></div>
 
         </div>
     </section>
-    <!-- Positon Opening -->
+    <!-- Position Opening -->
 
 
     <!-- Footer-->
@@ -165,9 +165,9 @@
         <div class="container px-5">
             <div class="text-white-50 small">
                 <div id="copyright-text" class="mb-2"></div>
-                <a id="github-link" href="https://github.com/senli1073">Github</a>
+                <a id="github-link" href="https://github.com/1222LXJ">Github</a>
                 <span class="mx-1">&middot;</span>
-                <a id="license-link" href="https://github.com/senli1073/senli1073.github.io/blob/main/LICENSE">License</a>
+                <a id="license-link" href="https://github.com/1222LXJ/1222LXJ.github.io/blob/main/LICENSE">License</a>
             </div>
         </div>
     </footer>
